bulb-on and bulb-offo

--- a/bulb.html
+++ b/bulb.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On-and-Off-Switch</title>
-    <link rel="stylesheet" href="/On-and-Off-Switch/bulb.css">
+    <link rel="stylesheet" href="/bulb.css">
 </head>
+
 <body>
-        <button id="button-off">Turn-off</button>
-    </div>
+    <button id="button-off">Turn-off</button>
+    <img id="bulbImage" src="/bulb-off.png">
 </body>
-<script src="/On-and-Off-Switch/bulb.js"></script>
+<script src="/bulb.js"></script>
 </html>
